--- a/jupyter-local/notebooks/postgres_snapshot.ipynb
+++ b/jupyter-local/notebooks/postgres_snapshot.ipynb
@@ -221,6 +221,15 @@
     "spark.read \\\n",
     "    .format(\"parquet\").load(\"/home/jovyan/weight_report\").show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
